--- a/index.html
+++ b/index.html
@@ -2,28 +2,78 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>practoce css</title>
+  <title>test html</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="flex">
-    <h2 class="company">COACHTECH</h2>
-    <div class="cat">
-      <div class="cat_item">ホーム</div>
-      <div class="cat_item">事業内容</div>
-      <div class="cat_item">採用情報</div>
-      <div class="cat_item">お問い合わせ</div>
-    </div>
+
+  <div class="firstview">
+    <img class="firstview__img" src="./img/firstview.jpg" alt="">
+    <h1 class="firstview__text">キャッチコピー</h1>
   </div>
 
-  <div class=top>
-    <h1 class="top_ttl">毎日を笑顔に</h1>
-    <div class="top_img">
-      <img src="./img/firstview.jpeg" alt="">
+  <section>
+    <h2 class="content">About</h2>
+    <p class="content__about--text">COACHTECH(コーチテック)はフリーランス特化型のオンラインコーチングプログラミングスクールです。<br>
+    プログラミング未経験の方でも、<strong>「独自の学習ノウハウ」</strong>でフリーランスエンジニアを目指すことができます。</p>
+  </section>
+
+  <section>
+    <h2 class="content">ブログ</h2>
+    <div class="content__blog">
+      <div class="content__blog--item">
+        <img class="content__blog--img" src="./img/blog__eyecatch1.jpg" alt="">
+        <p class="content__blog--text">コーチテックのブログのタイトルがここには入ります。</p>
+      </div>
+      <div class="content__blog--item">
+        <img class="content__blog--img"  src="./img/blog__eyecatch2.jpg" alt="">
+        <p class="content__blog--text">コーチテックのブログのタイトルがここには入ります。</p>
+      </div>
+      <div class="content__blog--item">
+        <img class="content__blog--img"  src="./img/blog__eyecatch3.jpg" alt="">
+        <p class="content__blog--text">コーチテックのブログのタイトルがここには入ります。</p>
+      </div>
     </div>
-    <div class=top_line></div>
-  </div>
+  </section>
+
+  <section>
+    <h2 class="content">問い合わせ</h2>
+      <div class="content__contact">
+        <form method="get"></form>
+          <table>
+            <tr>
+              <th class="content__contact--ttl">名前</th>
+              <td><input type="text" name="name" size="58" id="name"></td>
+            </tr>
+            <tr>
+              <th class="content__contact--ttl">メールアドレス</th>
+              <td><input type="text" name="email" size="58" id="email"></td>
+            </tr>
+            <tr>
+              <th class="content__contact--ttl">用件</th>
+              <td>
+                <select name="select">
+                  <option value="広告掲載について">広告掲載について</option>
+                  <option value="求人について">求人について</option>
+                  <option value="その他">その他</option>
+                </select>
+              </td>
+            </tr>
+            <tr>
+              <th class="content__contact--ttl">内容</th>
+              <td><textarea name="textarea" cols="60" rows="10"></textarea></td>
+            </tr>
+          </table>
+        </form>
+      </div>
+      <div class="content__contact--btn">
+        <a class="content__contact--btn-del">削除</a>
+        <a class="content__contact--btn-send">送信</a>
+      </div>
+  </section>
+
 </body>
 </html>
